<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CF5151"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="680dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="129dp"
                android:layout_height="116dp"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon___gambar_2_naylaa"
                tools:ignore="ImageContrastCheck,ImageContrastCheck"
                android:contentDescription="@string/img" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/APLIKASI_PENGADUAN_MASYARAKAT"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="207dp"
                android:layout_height="34dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/Username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="207dp"
                android:layout_height="34dp"
                android:layout_marginBottom="68dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck"
                android:autofillHints="" />

            <Button
                android:id="@+id/button"
                android:layout_width="258dp"
                android:layout_height="52dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#F37878"
                android:text="@string/masuk"
                android:onClick="setting"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/button2"
                android:layout_width="258dp"
                android:layout_height="52dp"
                android:layout_marginBottom="90dp"
                android:backgroundTint="#00695C"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/belum_punya_akun"
                android:textColor="#CF5151"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:srcCompat="@drawable/password__gambar_3_naylaa"
                android:contentDescription="@string/ic" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/user__gambar_4_naylaa"
                android:contentDescription="@string/TODO_" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

