<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F37878"
    tools:context=".Registrasi">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="680dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="129dp"
                android:layout_height="116dp"
                android:layout_marginTop="48dp"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon___gambar_2_naylaa"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="326dp"
                android:layout_height="465dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="35dp"
                app:cardBackgroundColor="#F37878"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F37878">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/registrasi_aplikasi"
                        android:textColor="#E4E4E4"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="252dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="30dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:ems="10"
                        android:hint="   NIK"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="252dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:hint="   username"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName4"
                        android:layout_width="252dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:ems="10"
                        android:hint="   ID Baru"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

                    <EditText
                        android:id="@+id/editTextTextPassword2"
                        android:layout_width="252dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:hint=" *****"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="252dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:hint="   Masukkan No. Telp."
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="184dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="32dp"
                        android:backgroundTint="#00695C"
                        android:onClick="login"
                        android:text="@string/registrasi"
                        android:textColor="#FFFFFF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:text="@string/sudah_mempunyai_akun"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView8"
                        app:layout_constraintHorizontal_bias="0.262"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="190dp"
                        android:layout_marginBottom="40dp"
                        android:text="Masuk Disini"
                        android:textColor="#EDDB80"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.535"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>